--- a/accounts/templates/welcome.html
+++ b/accounts/templates/welcome.html
@@ -136,11 +136,14 @@
         </a>
 
       </div>
-    </div>
+
   </section><!-- End Hero -->
 
 <div>
-    <section>
+
+  <section id="faq" class="faq section-bg">
+      <div class="container">
+<section>
         <div style="background-color: #e6ffcc; padding: 20px;, border: 2px solid;
         width: 300px; resize: both; overflow: auto; font-size:20px;border-radius: 25px; text-align: left;" >
             <h3 style="text-align: center"></h3>
@@ -148,13 +151,17 @@
             <p>Hi {{name}},</p>
             <p><strong>Your Email:</strong> {{request.user}}</p>
             <p><strong>Your Candidate Code:</strong> {{code}}</p>
+          <p style="color: #9933ff"> Are You ready?? Start your exam <strong><a href="/exam">now</a></strong> </p>
         </div>
 
     </section>
+
+      </div>
+    </section><!-- End Frequently Asked Questions Section -->
 </div>
 <!-- ======= Footer ======= -->
   <footer style="background-color: MediumSeaGreen;" id="footer">
-    <button onclick="/login"></button>
+
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
