--- a/homeapp/templates/homeapp/index.html
+++ b/homeapp/templates/homeapp/index.html
@@ -336,7 +336,7 @@
     </section><!-- End Frequently Asked Questions Section -->
 
     <!-- ======= Contact Us Section ======= -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact" >
       <div class="container">
 
         <div class="section-title">
@@ -346,10 +346,10 @@
         <div class="row">
 
           <div class="col-lg-6 d-flex align-items-stretch" data-aos="fade-up">
-            <div class="info-box">
+            <div class="info-box" >
               <i class="bx bx-map"></i>
               <h3>Our Address</h3>
-              <p>Ekpoma, Edo State, Nigeria.</p>
+              <p style="text-align: center;">Ekpoma, Edo State, Nigeria.</p>
             </div>
           </div>
 
@@ -357,7 +357,7 @@
             <div class="info-box">
               <i class="bx bx-envelope"></i>
               <h3>Email Us</h3>
-              <p>Intern@anrescentpub.com<br>Nwaoparaao@yahoo.com</p>
+              <p style="text-align: center;">Intern@anrescentpub.com<br>Nwaoparaao@yahoo.com</p>
             </div>
           </div>
 
@@ -365,7 +365,7 @@
             <div class="info-box ">
               <i class="bx bx-phone-call"></i>
               <h3>Call Us</h3>
-              <p>07035432323</p>
+              <p style="text-align: center;">07035432323</p>
             </div>
           </div>
 
