--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -52,7 +52,7 @@ form{
            <form style="background-color: DodgerBlue" action="" method="POST" class="form-container">
         <div class="form-group">
           <h4 class="text-center font-weight-bold" style="color: white; "> Prospective Intern Login </h4>
-            <h6 class="text-center"style="font-size: 10px"><strong style="color: red">*</strong>Kindly login with your email address</h6>
+            <h6 class="text-center"style="font-size: 10px; "><strong style="color: red">*</strong>Kindly login with your email address</h6>
 
                 {% csrf_token %}
                 {% if error %}
