--- a/homeapp/templates/homeapp/index.html
+++ b/homeapp/templates/homeapp/index.html
@@ -24,7 +24,7 @@
 </style>
   <!-- Favicons -->
  <link rel="icon" href="{% static '../../static/images/GERSEP.jpg' %}" type="image/x-icon">
-  <link href="{%static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+  <link href="{% static '../../static/images/GERSEP.jpg' %}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet">
@@ -148,7 +148,7 @@
         <div class="row no-gutters">
           <div class="col-lg-6 video-box">
             <img src="{% static '../../static/images/img.jpg' %}" class="img-fluid" alt="">
-            <a href="https://youtu.be/18Nh3yYXJAA" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+            <a href="https://youtu.be/e7InYmdCQ64" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"><iframe width="560" height="315" src="https://www.youtube.com/embed/e7InYmdCQ64" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></a>
           </div>
 
           <div class="col-lg-6 d-flex flex-column justify-content-center about-content">
