--- a/exams/templates/exam_page.html
+++ b/exams/templates/exam_page.html
@@ -53,7 +53,7 @@ p {color: white}
      {%for question in questions%}
           <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up">
 
-            <h4 style="color: white">Start time: {{question.start_time}} <br> Deadline: {{question.start_time}}</h4>
+            <h4 style="color: white">Start time: {{question.start_time}} <br> Deadline: {{question.deadline}}</h4>
 
           </div>
           <br>
