--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -5,7 +5,7 @@
         <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
 
         <link href="http://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet" type="text/css" />
-        <title>Title</title>
+        <title>Gersep Cert</title>
         <style type="text/css">
             body {
                 font-weight: 200;
