--- a/homeapp/templates/homeapp/index.html
+++ b/homeapp/templates/homeapp/index.html
@@ -221,6 +221,17 @@
           {% endfor %}
 
         </div>
+        <!--<h4 id="count">1</h4> <button class="btn btn-primary danger" onclick= "addNum()">Click Here</button>-->
+        <p id="pa"></p>
+<script>
+  function addNum(){
+  var a= document.getElementById("count").innerHTML;
+  var b = (Number(a))+1;
+  console.log(a)
+  document.getElementById("count").innerHTML =  b;}
+
+</script>
+        <a href="{% static '../../static/pdfs/Magazine_2.pdf' %}" target="_blank" type="document/pdf">Click here for the magazine</a>
 
       </div>
     </section><!-- End About Lists Section -->
