--- a/exams/templates/success.html
+++ b/exams/templates/success.html
@@ -49,9 +49,9 @@
 </head>
 <body style="background-image: url('{% static '../../static/images/GERSEP.jpg' %}'); padding: 200px;background-repeat: no-repeat;" >
 <div class="container">
-    <h2 style="align: center; font-size: 30px">Congrats Champion!</h2>
-        <p style="color: Green; font-size: 15px">You made it to the end!. Kindly wait for the final list<br> <strong style="color: red">This however, is NOT a guarantee that you have been selected.</strong> </p>
-    <p>Go <a href="/logged_in">back</a> to your portal</p>
+    <h2 style="align: center; font-size: 30px">Done!</h2>
+        <p style="color: Green; font-size: 15px">If you scale thru, your staff form will be sent to you later.<br> </strong> </p>
+    <p>Go <a href="/logged_in" class="btn btn-primary">back</a> to your portal</p>
 
 </div>
 
