--- a/accounts/templates/welcome.html
+++ b/accounts/templates/welcome.html
@@ -151,8 +151,8 @@
             <p>Hi {{name}},</p>
             <p><strong>Your Email:</strong> {{request.user}}</p>
             <p><strong>Your Candidate Code:</strong> {{code}}</p>
-          <p style="color: #9933ff"> Download your recruitment participation certificate <strong><a href="/pdf">now</a></strong> </p>
-          <p style="color: #9933ff"> Are You ready?? Start your exam <strong><a href="/exam">now</a></strong> </p>
+          <p style="color: #9933ff"> Download your recruitment participation certificate <strong><a href="#">now</a></strong> </p>
+          <p style="color: #9933ff"> Are You ready?? Start your exam <strong><a class="btn btn-secondary" href="/exam">now</a></strong> </p>
         </div>
 
     </section>
